--- a/.github/workflows/check_setup_py.yaml
+++ b/.github/workflows/check_setup_py.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Show changes on working copy
       run: git status --porcelain=v1 -uno
     - name: Show diff on working copy
-      run: git diff --cached; git diff --cached --summary
+      run: git diff --cached; git diff --cached --summary; cat setup.py
     - name: Check if setup.py changed
       run: |
         [ -z "$(git status --porcelain=v1 -uno 2>/dev/null)" ]
