--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -16,6 +16,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: 1.1.4
       - name: Poetry install
         run: poetry install
       - name: Poetry build
