--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,12 @@ keywords = ['exasol', 'data-science']
 [tool.poetry.dependencies]
 python = ">=3.6.1"
 pyexasol = "^0.17.0"
+pandas = "^1.1.0"
+exasol-bucketfs-utils-python  = { git = "https://github.com/exasol/bucketfs-utils-python.git", branch = "develop" }
+scikit-learn = "^0.24.1"
+mlxtend = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
 pytest-cov = "^2.10.1"
+exasol-udf-mock-python = { git = "https://github.com/exasol/udf-mock-python.git", branch = "master" }
