--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,12 @@ keywords = ['exasol', 'data-science']
 python = ">=3.6.1"
 pyexasol = "^0.17.0"
 pandas = "^1.1.0"
+joblib = "^1.0.1"
 exasol-bucketfs-utils-python  = { git = "https://github.com/exasol/bucketfs-utils-python.git", branch = "develop" }
 scikit-learn = "^0.24.1"
 mlxtend = "^0.18.0"
+jsonpickle = "^2.0.0"
+simplejson = "^3.17.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
