--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,11 @@ homepage = "https://github.com/exasol/data-science-utils-python"
 keywords = ['exasol', 'data-science']
 
 [tool.poetry.dependencies]
-python = ">=3.6.1"
+python = ">=3.6.1,<4.0"
 pyexasol = "^0.17.0"
 pandas = "^1.1.0"
 joblib = "^1.0.1"
-exasol-bucketfs-utils-python  = { git = "https://github.com/exasol/bucketfs-utils-python.git", branch = "develop" }
+exasol-bucketfs-utils-python  = { git = "https://github.com/exasol/bucketfs-utils-python.git", branch = "main" }
 scikit-learn = "^0.24.1"
 mlxtend = "^0.18.0"
 jsonpickle = "^2.0.0"
