Simplify the structure of language container flavor, by copying the wheel into release build step, instead reference it relative to the build_steps.py

--- a/language_container/exasol-data-science-utils-python-container/flavor_base/release/Dockerfile
+++ b/language_container/exasol-data-science-utils-python-container/flavor_base/release/Dockerfile
@@ -1,6 +1,6 @@
 FROM exasol/script-language-container:python-3.6-minimal-EXASOL-6.2.0-release_SNZAIAUSLUKJOUDSHCUTK7ARK4QQGZYMP2BHE7JLHQMBQRQRRN4A
 
-COPY dist /project
+COPY release/dist /project
 RUN pip install /project/*.whl
 
 
