--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ scikit-learn = "^0.24.1"
 mlxtend = "^0.18.0"
 jsonpickle = "^2.0.0"
 simplejson = "^3.17.2"
+typeguard = "^2.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
