--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ mlxtend = "^0.18.0"
 jsonpickle = "^2.0.0"
 simplejson = "^3.17.2"
 typeguard = "^2.11.1"
+tenacity = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
