--- a/.github/workflows/language_container.yaml
+++ b/.github/workflows/language_container.yaml
@@ -4,8 +4,6 @@ on: [ push, pull_request ]
 
 jobs:
   integration_tests:
-    strategy:
-      fail-fast: false
     runs-on: ubuntu-latest
 
     steps:
@@ -15,6 +13,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: abatilo/actions-poetry@v2.1.4
         with:
-          poetry-version: 1..2.0
+          poetry-version: 1.2.0
       - name: Build language container
         run: ./build_language_container.sh
