--- a/.github/workflows/language_container.yaml
+++ b/.github/workflows/language_container.yaml
@@ -13,6 +13,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: abatilo/actions-poetry@v2.1.4
         with:
-          poetry-version: 1.2.4
+          poetry-version: 1.2.2
+      - name: uninstall
+        run: pip uninstall -y urllib3 chardet
+      - name: install requests
+        run: pip3 install --upgrade requests
       - name: Build language container
         run: ./build_language_container.sh
