--- a/.github/workflows/language_container.yaml
+++ b/.github/workflows/language_container.yaml
@@ -5,6 +5,10 @@ on: [ push, pull_request ]
 jobs:
   integration_tests:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.8]
 
     steps:
       - uses: actions/checkout@v2
@@ -13,6 +17,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: abatilo/actions-poetry@v2.1.4
         with:
-          poetry-version: 1.2.0
+          poetry-version: 1.2.2
       - name: Build language container
         run: ./build_language_container.sh
