--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ python = ">=3.8,<4.0"
 pyexasol = "^0.25.0"
 pandas = "^1.1.0"
 joblib = "^1.0.1"
-exasol-bucketfs-utils-python  = { git = "https://github.com/exasol/bucketfs-utils-python.git", branch = "main" }
+
+exasol-bucketfs = "^0.6.0"
 scikit-learn = "^1.1.2"
 mlxtend = "^0.20.0"
 jsonpickle = "^2.0.0"
