Update bucketfs-python and remove setup.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,11 @@ python = ">=3.8,<4.0"
 pyexasol = "^0.25.0"
 pandas = "^1.1.0"
 joblib = "^1.0.1"
-exasol-bucketfs-utils-python  = { git = "https://github.com/exasol/bucketfs-utils-python.git", branch = "main" }
+exasol-bucketfs = {git = "https://github.com/exasol/bucketfs-python.git", rev = "feature/add_download_fileobj_to_bucketfs_location"}
 scikit-learn = "^1.1.2"
 mlxtend = "^0.20.0"
 jsonpickle = "^2.0.0"
 simplejson = "^3.17.2"
-typeguard = "^2.11.1"
 tenacity = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
