--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,4 @@ tenacity = "^8.0.1"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 coverage = "^6.4.4"
-exasol-udf-mock-python = { git = "https://github.com/exasol/udf-mock-python.git", branch = "main" }
+exasol-udf-mock-python = "0.1.0"
