--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ pandas = "^1.1.0"
 joblib = "^1.0.1"
 
 exasol-bucketfs = "^0.6.0"
-scikit-learn = "^1.1.2"
+scikit-learn = "1.1.2"
 mlxtend = "^0.20.0"
 jsonpickle = "^2.0.0"
 simplejson = "^3.17.2"
