--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
         run: poetry build
 
       - name: Checkout test environment
-        run: git clone https://github.com/exasol/integration-test-docker-environment.git
+        run: git clone -b 1.6.0 https://github.com/exasol/integration-test-docker-environment.git
         working-directory: ..
       - name: Spawn EXASOL environemnt
         run: ./start-test-env spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6583 --db-mem-size 4GB
