--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,13 @@ keywords = ['exasol', 'data-science']
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
 pyexasol = "^0.25.0"
-pandas = "^1.1.0"
-joblib = "^1.0.1"
-
+numpy = "1.24.4"
+pandas = "1.4.0"
+joblib = "1.0.1"
 exasol-bucketfs = "^0.6.0"
-scikit-learn = "^1.1.2"
-mlxtend = "^0.20.0"
+scikit-learn = "1.1.2"
+scipy = "1.9.3"
+mlxtend = "0.20.0"
 jsonpickle = "^2.0.0"
 simplejson = "^3.17.2"
 typeguard = "^2.11.1"
@@ -35,4 +36,4 @@ tenacity = "^8.0.1"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 coverage = "^6.4.4"
-exasol-udf-mock-python = { git = "https://github.com/exasol/udf-mock-python.git", branch = "main" }
+exasol-udf-mock-python = "0.1.0"
